# django-smart-image

./: LICENSE  pyproject.toml
smart_image/: widgets.py
smart_image/templates/smart_image/: cam_image_input.html  preview_image_input.html
src/: apps.py  fields.py  handlers.py
src/smart_image/: apps.py  storages.py  widgets.py
src/smart_image/templates/smart_image/: cam_image_input.html  preview_image_input.html
