[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "django-smart-image"
version = "0.1.1"
authors = [
    { name = "Eduardo Skoroboatei Gomes", email = "eduskoroboatei@gmail.com" }
]
description = "Image media utils for django. Custom image fields with format conversion, cropping and validation. Hashed based filename storage. Cleanup and widgets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "pillow>=12.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_image"]

[project.urls]
Homepage = "https://github.com/edu292/django-smart-image"
Issues = "https://github.com/pypa/django-smart-image/issues"


[tool.basedpyright]
typeCheckingMode = "standard"
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportOptionalMemberAccess = 'none'
reportOptionalSubscript = 'none'
reportOptionalCall = 'none'

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "N", "RUF"]
ignore = ["F821", "F841"]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
